<resources>
    <string name="app_name">HotLikeMe</string>
    <string name="image_selected_title">Image Selected</string>
    <string name="image_container">Container for images on GridView</string>
    <string name="title_activity_hlm">HLMActivity</string>
    <string name="title_activity_fire_browser">Change your picture</string>
    <string name="title_activity_image_browser">Upload new Images</string>
    <string name="title_activity_pager_hlm">HotLikeMe</string>
    <string name="title_activity_login">Login &amp; Profile Pic</string>
    <string name="title_activity_chat">HotLikeMe Chat</string>
    <string name="title_activity_settings">HotLikeMe Settings</string>

    <!-- Strings related to Menu -->
    <string name="action_fb_logout">Basic Settings and Log out</string>
    <string name="action_profile_settings">Profile Image</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile_pic">Profile Image</string>
    <string name="action_help">Help</string>
    <string name="action_start_chat">Send a message</string>

    <string name="app_description">Hello Hot Users</string>
    <string name="app_welcome">Welcome! You have successfully log in</string>

    <string name="facebook_app_id">755197327949172</string>
    <string name="fb_login_protocol_scheme">fb755197327949172</string>
    <string name="text_profile_pic">Profile Pic</string>

    <string name="btn_choose_img">Upload Your Images</string>
    <string name="btn_settings">Nickname, Looking for&#8230;</string>
    <string name="btn_start">Let\'s Start!</string>
    <string name="btn_ok">Yes!</string>
    <string name="btn_cancel">No!</string>

    <!-- Strings Login & Settings -->
    <string name="login_switch_visible">Others users can find me</string>
    <string name="login_switch_nearby">Show only users nearby</string>

    <!-- Strings related to Settings -->
    <string name="action_delete">Delete Image</string>

    <!-- Example General settings -->
    <string name="pref_header_general">Personal Info</string>
    <string name="pref_header_image">Profile Image</string>

    <string name="pref_title_social_recommendations">Visible to others</string>
    <string name="pref_description_social_recommendations">Users can see your profile
        image, rate it, and get in Touch with you.
    </string>

    <string name="pref_title_display_name">Display name:</string>
    <string name="pref_default_display_name">Your display name here</string>

    <string name="pref_title_looking_for">Looking for:</string>
    <string-array name="pref_looking_for_titles">
        <item>Girls</item>
        <item>Boys</item>
        <item>Boys &amp; Girls</item>
    </string-array>
    <string-array name="pref_looking_for_values">
        <item>female</item>
        <item>male</item>
        <item>both</item>
    </string-array>

    <string name="pref_title_description">A little description about you:</string>
    <string name="pref_default_description">Tell others about you, and your interests.</string>
    <string name="pref_default_missing_description">We\'re sorry, We have no description for this User.</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Sync &amp; Localization</string>

    <string name="pref_title_localization">Enable GPS Localization</string>
    <string name="pref_localization_description">
        Let other Users know if you\'re Close to them. Nobody will see your exact position. If Disable,
        you would not be able to see any near user
    </string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_description">
        How often do you want to update your actual position and look for new users around you.
        Longer times, netter battery life, but less updates.
    </string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
    </string-array>

    <string name="pref_title_discovery_distance">Max. Distance to Find Users:</string>
    <string-array name="pref_discovery_distance_titles">
        <item>500 meters</item>
        <item>1 kilometer</item>
        <item>3 kilometers</item>
        <item>5 kilometers</item>
        <item>10 kilometers</item>
        <item>50 kilometers</item>
    </string-array>
    <string-array name="pref_discovery_distance_values">
        <item>500</item>
        <item>1000</item>
        <item>3000</item>
        <item>5000</item>
        <item>10000</item>
        <item>50000</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_discovery_notifications">Discovery Notifications</string>

    <string name="pref_title_new_discovery_notifications">New Discovery Notifications</string>
    <string name="pref_discovery_ringtone">Sound on Notification</string>
    <string name="pref_discovery_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate_on_discovery">Vibrate on New Discovery</string>
    <string name="pref_title_page_transform">Animation between Screens</string>
    <string name="pref_title_page_transform_info">Animation between Screens</string>

    <string-array name="pref_animation_titles">
        <item>None</item>
        <item>Zoom and Slide</item>
        <!--<item>Cards</item> -->
    </string-array>
    <string-array name="pref_animation_values">
        <item>none</item>
        <item>zoom1</item>
        <!--<item>zoom2</item> -->
    </string-array>

    <!-- Settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New Notification</string>
    <string name="pref_title_ringtone">Sound on Notification</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate on Notification</string>

    <!-- Context Dialogs up ahead -->

    <string name="text_welcome">Welcome&#160;</string>
    <string name="text_welcome_again">Welcome back!</string>
    <string name="text_see_you_soon">See you soon!</string>
    <string name="text_choose_images">Please choose a few Images for Hot Like Me!</string>
    <string name="text_first_select_images">Please, first upload a few images for HotLikeMe.</string>
    <string name="text_no_images_selected">No images selected, please select at least one.</string>
    <string name="text_sign_in">"Welcome to HotLikeMe \n Please log in"</string>
    <string name="text_hlm_start_button">Bla, bla bla&#8230; Let\'s Go!</string>
    <string name="text_cancel_selection">"Bla, bla bla&#8230;"</string>
    <string name="text_hlm_change_profile_pic">Change your profile Picture</string>
    <string name="text_profile_picture_selected">New Profile Picture selected!</string>
    <string name="text_settings_activity">your display name, synchronization options, and more.</string>
    <string name="text_start_HLM">
         - Please Upload a few of your images for HotLikeMe.
        \n- Click the Profile Image to change it for your Own.
        \n- Navigate Swiping to the Right.
        \n- Change Other Settings from the Lateral Menu.
    </string>
    <string name="text_uploading">Uploading&#160;</string>
    <string name="text_image_uploaded">Image uploaded</string>
    <string name="text_images_uploaded">All images Uploaded!</string>
    <string name="text_delete_images_no_selected">
        If you want to delete images, please select at least one, with a Long Click
    </string>
    <string name="text_deleting_selected_images_1">You ara about to delete&#160;</string>
    <string name="text_deleting_selected_images_2">&#160;image(s). Are you Sure?</string>
    <string name="text_deleting_images">Deleting Images&#8230;</string>
    <string name="text_user_name">No one Hot right now</string>
    <string name="text_slide">
        We are sorry, there are no active Hot Users in your zone, change the Distance on the Settings,
        or Press Reload Button in a few minutes.
    </string>
    <string name="text_hlm_users">Profile pics of HotLikeMe Users</string>
    <string name="text_network_access_required">Network not available. Please check your Internet Connection and Try Again</string>
    <string name="text_app_introduction">Here you will find New Friends, New Relations, New Experiences</string>
    <string name="text_enable_gps_snack">"To see only users close to you, enable GPS on Settings or Here."</string>
    <string name="text_log_into_facebook_again">"Your Facebook Session has expired, Please Log into Facebook Again."</string>

    <!-- HLM Chat Strings -->
    <string name="welcome_msg">HotLikeMe: Welcome to the Chat!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>

    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me in HotLikeMe</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">HotLikeMe Chat Invite</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>

    <!-- HLM Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_text_chat">Chat</string>
    <string name="drawer_text_navigate">Navigate</string>
    <string name="drawer_text_settings">Settings</string>
    <string name="drawer_text_other_settings">Others</string>
    <string name="drawer_text_communicate">Communicate</string>
    <string name="drawer_text_share">Share</string>
    <string name="drawer_text_invite">Invite</string>

</resources>
