<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.mezcaldev.hotlikeme.HLMSettings$ProfileImageFragment"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/pref_header_image" />
    <header
        android:fragment="com.mezcaldev.hotlikeme.HLMSettings$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.mezcaldev.hotlikeme.HLMSettings$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.mezcaldev.hotlikeme.HLMSettings$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
