<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HLMSlidePagerActivity">
    <item
        android:id="@+id/action_profile_settings"
        android:title="@string/action_profile_settings"
        android:icon="@drawable/ic_account_circle_24dp"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@drawable/ic_settings_24dp"
        android:visible="true" />
</menu>
