<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_discovery_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_discovery"
            android:title="@string/pref_title_new_discovery_notifications" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_discovery"
            android:key="notifications_new_discovery_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_discovery_ringtone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_discovery"
            android:key="notifications_new_discovery_vibrate"
            android:title="@string/pref_title_vibrate_on_discovery" />

        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines. -->
        <!--
        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference> -->
    </PreferenceCategory>

</PreferenceScreen>
