<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:id="@+id/fb_textWelcome"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <com.facebook.login.widget.ProfilePictureView
        android:id="@+id/fb_image"
        android:visibility="visible"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/fb_textWelcome"
        android:layout_toEndOf="@+id/fb_textWelcome"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/hlm_image"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_account_circle_gray_64dp"
        app:civ_border_width="8dp"
        app:civ_border_color="@color/colorWhite"
        android:layout_below="@+id/fb_image"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/btn_choose_img"
        android:visibility="gone"
        android:layout_width="182dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/hlm_image"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_choose_img"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:id="@+id/text_display_name_helper"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/pref_title_display_name"
        android:layout_above="@+id/text_display_name"
        android:layout_centerHorizontal="true" />

    <EditText
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:text="@string/pref_title_display_name"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/btn_choose_img"
        android:layout_centerHorizontal="true"
        android:id="@+id/text_display_name"
        android:hint="@string/pref_default_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_display_name"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:paddingTop="20dp"
        android:layout_margin="10dp"
        android:id="@+id/text_instruct"/>

</RelativeLayout>
